--- a/static/style.css
+++ b/static/style.css
@@ -60,6 +60,10 @@ h2 {
   background-color: purple;
 }
 
+.unavailable {
+  background-color: lightblue;
+}
+
 #main {
   max-width:600px;
   padding:10px 30px 10px;
